--- a/.gitignore
+++ b/.gitignore
@@ -1,129 +1,35 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
-
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-.python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
+#Name:Sachin Kalra
+#Author:Madiha Kazmi
+#Date created: 21-november-2022
+#Purpose: This program will ask the user's detail and and ask for the choice the user wants to enroll
+firstname = print("enter your first name ")
+firstname = input()
+lastname = print("enter your last name")
+lastname = input()
+studentnumber = print("enter your student number" )
+studentnumber = input() 
+#the data entered by user stored in a list
+studentdata=[firstname,lastname,studentnumber]
+#display the user availble courses
+print("you have  four couses available that are as follow:")
+def courses():
+    courses_Available = {
+        "info1385": "Network Infrastructure",
+        "info1145": "IT Documentation",
+        "info1783": "IT Programmming",
+        "info1250": "Computer system Fundamentals"
+    }
+    print(courses_Available)
+    #get the  user's input for the choice  of courses
+    user_choice =print("please enter the course codes that you  want to enrolled for ") 
+    user_choice=(input())
+    if user_choice in courses_Available:    
+        print(studentdata)
+        #display the user's  information along with the choosed  courses
+        selection=print("you  are now enrolled in",courses_Available.get("user_choice") )
+        print(user_choice,selection)
+        print("thankyou")   
+    else:
+        ("please enter a valid choice")
+        courses()
+courses()
